# backend/src/main/java/io/github/jackhudsonn/jaakd/controller/HoldingController.java
@@ -1,13 +1,14 @@
 package io.github.jackhudsonn.jaakd.controller;
 
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
+import io.github.jackhudsonn.jaakd.dto.LotMatchResponse;
+import io.github.jackhudsonn.jaakd.dto.PositionLotResponse;
 import io.github.jackhudsonn.jaakd.dto.PortfolioReconciliationResponse;
 import io.github.jackhudsonn.jaakd.model.Holding;
 import io.github.jackhudsonn.jaakd.service.HoldingService;
@@ -49,9 +50,16 @@ public class HoldingController {
 		return holdingService.getHoldingById(holdingId);
 	}
 
-	@DeleteMapping("/{holdingId}")
-	@ResponseStatus(HttpStatus.NO_CONTENT)
-	public void deleteHolding(@PathVariable UUID holdingId) {
-		holdingService.deleteHolding(holdingId);
+	@GetMapping("/{holdingId}/position-lots")
+	@ResponseStatus(HttpStatus.OK)
+	public List<PositionLotResponse> getPositionLotsByHolding(@PathVariable UUID holdingId) {
+		return holdingService.getPositionLotsForHolding(holdingId);
 	}
+
+	@GetMapping("/{holdingId}/lot-matches")
+	@ResponseStatus(HttpStatus.OK)
+	public List<LotMatchResponse> getLotMatchesByHolding(@PathVariable UUID holdingId) {
+		return holdingService.getLotMatchesForHolding(holdingId);
+	}
+
 }
